--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,3 +1,6 @@
+---
+---
+
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us">
 <head>
@@ -6,54 +9,7 @@
   <link rel="shortcut icon" href="{{ site.url }}/images/favicon.gif" />
   <title>{{ page.title }}</title>
   
-  <style type="text/css">
-
-  blockquote{
-    color:#666666;
-    margin:0;
-    padding-left: 3em;
-    border-left: 0.5em #EEE solid;
-  }
-
-  pre , code, kbd, samp { 
-    color: #000; 
-    font-family: monospace; 
-    font-size: 1em; 
-    border-radius:3px;
-    background-color: #F8F8F8;
-    border: 1px solid #CCC; 
-  }
-  pre { 
-    white-space: pre; 
-    white-space: pre-wrap; 
-    word-wrap: break-word; 
-    padding: 5px 12px;
-  }
-  pre code { border: 0px !important; padding: 0;}
-  code { padding: 0 3px 0 3px; }
-  body{font-family:arial;background-color:#A0A0A0}
-  a:link {text-decoration:underline;color:#006666;}
-  a:visited {text-decoration:none;color:#006666;}
-  a:hover {text-decoration:none;border-bottom: 1px dotted #006666;color:#333333;}
-  a:active {text-decoration:none;color:#006666;}
-  div.tags {margin-top:-5px;margin-bottom:6px;font-size:12px}
-  div.shortDesc {margin-bottom:6px;font-size:14px}
-  p.desc {display:none;}
-
-  h4 {color:#006666;margin-top: 12.5px}
-
-  button {padding: 0px; font-size:10px;font-weight:900; border-style:solid; border-width:2px; border-radius:4px; border-color:#AAA; color: #AAA; background-color: transparent;float:right; width:18px;text-align:center;cursor:pointer;}
-
-  b.projectTitle {cursor:pointer;}
-
-  div.container{min-width:600px; max-width:1000px; margin:10px auto;}
-  div.left{float:left; width:250px; min-height:100%; margin-left:5px; margin-right:5px; background-color:#111; color:#AAA; border-radius:10px; -moz-border-radius:25px;}
-  div.center{width:auto; margin-left:265px; margin-right:5px; margin-bottom:10px; background-color:#FFF; color:#111; border-radius:10px; -moz-border-radius:25px; padding-left:12.5px; padding-right:12.5px; padding-bottom:1px; padding-top:1px;}
-  #right {float:left; width:250px; margin-left:5px; margin-right:5px; margin-top:-22px; background-color:#111; color:#EEE}
-
-  .twtr-hd, .twtr-ft {display: none;}
-  </style>
-  
+  <link rel="stylesheet" href="{{ site.url }}/css/screen.css" type="text/css" />
   <!-- syntax highlighting CSS -->
   <link rel="stylesheet" href="{{ site.url }}/css/syntax.css" type="text/css" />
   <!-- <link rel="stylesheet" href="{{ site.url }}/css/pygments.css" type="text/css" > -->
@@ -61,14 +17,14 @@
 <body>
   <div class="container">
     <!--Start of Left-->
-     <div class="left">     
-      <div style="margin-left:12.5px; margin-top:12.5px">
-        <h1 style="margin-top:-7px"><a href="{{ site.url }}/">Vijay Krishna Palepu</a></h1> 
+     <div class="left-container">     
+      <div class="left">
+        <h1 style="margin-top:-7px">Vijay Krishna Palepu</h1> 
         <p style="margin-top:-20px; margin-bottom:2px">vpalepu [at] uci [dot] edu</p>
         <img style="height: 300px; width: 225px" src="{{ site.url }}/images/Vijay%20Krishna.JPG" alt="Vijay Krishna" />
       </div>
-      <hr>
-      <div style="margin-left:12.5px">
+
+      <div class="left">
       
         <!-- <address> -->
           5243 Bren Hall<br>
@@ -78,55 +34,75 @@
           Irvine, CA 92697-3440
         
       </div>
-      <hr>
-      <div style="margin-left:12.5px">
+
+      <div class="left">
         <a href="https://bitbucket.org/vpalepu/resume/src/72f8106a82667b9ba369288a5aa96df5e1136850/resume.pdf?at=master" target="_blank" >Resume (pdf)</a><br>
         <!-- <a href="https://www.google.com/calendar/embed?src=vijay.0288%40gmail.com&ctz=America/Los_Angeles" target="_blank">Schedule</a><br> -->
         <!-- <a href="http://vijaykrishna.github.com">Notes</a><br> -->
-        <a href="http://www.linkedin.com/in/palepuvijaykrishna" target="_blank">@LinkedIn</a><br>
-          <a href="http://instagram.com/vpalepu" target="_blank">@Instagram</a><br>
+        <a href="http://www.linkedin.com/in/palepuvijaykrishna" target="_blank">@Linked<b>in</b></a><br>
+          <a href="http://instagram.com/vpalepu" target="_blank">@Instagram</a>
+          <br>
+          <a href="http://stackoverflow.com/users/1481262/vijay">@stack<b>overflow</b></a>
       </div>
-      <hr>
       <div>
         <script charset="utf-8" src="http://widgets.twimg.com/j/2/widget.js"></script>
-        <script>
-        new TWTR.Widget({
-          version: 2,
-          type: 'profile',
-          rpp: 4,
-          interval: 30000,
-          width: 250,
-          height: 300,
-          theme: {
-            shell: {
-              background: '#111111',
-              color: '#eeeeee'
-            },
-            tweets: {
-              background: '#111111',
-              color: '#eeeeee',
-              links: '#006666'
-            }
-          },
-          features: {
-            scrollbar: false,
-            loop: false,
-            live: false,
-            behavior: 'all'
-          }
-        }).render().setUser('vkpalepu').start();
+         <script>
+        // new TWTR.Widget({
+        //   version: 2,
+        //   type: 'profile',
+        //   rpp: 4,
+        //   interval: 30000,
+        //   width: 250,
+        //   height: 300,
+        //   theme: {
+        //     shell: {
+        //       background: '#111111',
+        //       color: '#eeeeee'
+        //     },
+        //     tweets: {
+        //       // background: '#111111',
+        //       // color: '#eeeeee',
+        //       // links: '#006666'
+        //     }
+        //   },
+        //   features: {
+        //     scrollbar: false,
+        //     loop: false,
+        //     live: false,
+        //     behavior: 'all'
+        //   }
+        // }).render().setUser('vkpalepu').start();
         </script>
+        <p class="label">Last modified: 21 Feb 2013</p>
       </div>
-      <hr>
-      <p style="margin-left:12.5px">Last modified: 06 Feb 2013</p>
     </div><!-- end of left -->
     <!--Start of Center-->
     <div class="center">  
-      <a href="{{ site.url }}/" style="margin:20px"><b>Home</b></a>
-      <a href="{{ site.url }}/projects.html" style="margin:20px"><b>Projects</b></a>
-      <a href="{{ site.url }}/blog.html" style="margin:20px"><b>Blog Posts</b></a>
+      {% if page.title == "Vijay Krishna Palepu" %}
+        <b style="margin:20px">Home</b>
+      {% else %}
+        <a href="{{ site.url }}/index.html" style="margin:20px"><b>Home</b></a>
+      {% endif %}
+
+      {% if page.title == "Projects - Vijay Krishna Palepu" %}
+        <b style="margin:20px">Projects</b>
+      {% else %}
+        <a href="{{ site.url }}/projects.html" style="margin:20px"><b>Projects</b></a>
+      {% endif %}
+      
+      {% if page.title == "News - Vijay Krishna Palepu" %}
+        <b style="margin:20px">News</b>
+      {% else %}
+        <a href="{{ site.url }}/news.html" style="margin:20px"><b>News</b></a>
+      {% endif %}
+
+      {% if page.title == "Blog - Vijay Krishna Palepu" %}
+        <b style="margin:20px">Blog Posts</b>
+      {% else %}
+        <a href="{{ site.url }}/blog.html" style="margin:20px"><b>Blog Posts</b></a>
+      {% endif %}
     </div>  
-    <div class="center">  
+    <!-- <div class="center"> -->  
       {{ content }}
     </div>  
   </div> <!-- end of main -->
