--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -4,9 +4,15 @@ layout: default
 
 <title>{{ page.title }}</title>
 <div class="center">
-<p> Date: {{ page.date | date_to_string }} </p>
+<p>
+{{ page.from }} to {{ page.to }}
+</p>
 
-<div id="post"> {{ content }} </div>
+<div id="post">
+{{ content }}
+</div>
+
+<div><i>TL;DR</i> - {{ page.one-liner }} </div>
 
 <div style="margin-bottom: 10px">
 	<br>
