--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,10 +3,28 @@ layout: default
 ---
 
 <title>{{ page.title }}</title>
-<div class="center">
-<p> Date: {{ page.date | date_to_string }} </p>
+<div class="plain stretch">
+<!-- <p>
+	{% if page.categories contains "blog"  %}
+    <a href="{{ site.url }}/index.html" class="icon-home"></a> /  
+		<a href="{{ site.url }}/blog.html">Notes</a> /
+    {{ page.title }}
+		<br/> 
+	{% else %}
+		<a href="{{ site.url }}/index.html" class="icon-home"></a> /  
+    <a href="{{ site.url }}/news.html">News</a> /
+		{{ page.title }}
+    <br/>
+	{% endif %}
+</p> -->
 
-<div id="post"> {{ content }} </div>
+<div id="post"> 
+  <span class="tags">
+    Date: {{ page.date | date_to_string }}
+  </span>
+  
+  {{ content }} 
+</div>
 
 <div style="margin-bottom: 10px">
 	<br>
@@ -20,7 +38,7 @@ layout: default
 </div>
 </div>
 
-<div class="center">
+<div class="plain stretch">
   <h2>Related Posts</h2>
   <ul class="posts">
     {% for post in site.related_posts limit:3 %}
