--- a/css/screen.css
+++ b/css/screen.css
@@ -1,6 +1,10 @@
 ---
 ---
 
+img, object {
+     max-width: 100%;
+}
+
 blockquote{
   color:#666666;
   margin:0;
@@ -28,25 +32,58 @@ code { padding: 0 3px 0 3px; }
 
 body {
   color:#444;
-  font-family:Georgia, Palatino, 'Palatino Linotype', Times, 'Times New Roman', "Hiragino Sans GB", "STXihei", "微软雅黑", serif;
-  font-size:13px;
+  /*font-family:Georgia, Palatino, 'Palatino Linotype', Times, 'Times New Roman', "Hiragino Sans GB", "STXihei", "微软雅黑", serif; */
+  /*font-family: Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;*/
+  /*font-family: "Arial Narrow", Arial, sans-serif;*/
+  /*font-family: 'Josefin Slab', serif;*/
+  /*font-family: 'Arvo', serif;*/
+  /*THIS ONE::*/
+  font-family: 'Andada', serif;
+  /*font-family: 'Open Sans', sans-serif;*/
+  /*font-family: Optima, Segoe, "Segoe UI", Candara, Calibri, Arial, sans-serif;*/
+  /*font-family: 'AvenirNextLTW01-Regular', Helvetica, sans-serif*/
+  font-size:1em;
   line-height:1.5em;
-  background:#fdfdfd;
-  background-image: url({{ site.url }}/images/subtle_dots.png);
-  margin: 10px auto;
-  padding: 1em;
+  background:#ffffff;
+  background-image: url({{ site.url }}/images/grains_of_sand.JPG);
+  background-image: url({{ site.url }}/images/DSC_0919a.jpg);
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-size: 100% auto;
+  background-position-x: center;
+  margin: 0px auto;
+  /*padding: 1em;*/
 }
+
+.date {
+  /*font-family: "Arial Narrow", Arial, sans-serif;*/
+  /*font-family: 'Josefin Slab', serif;*/
+  /*font-family: 'Open Sans', sans-serif;*/
+  /*font-family: Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;*/
+}
+
 
 ::-moz-selection{background:rgba(255,255,0,0.3);color:#000}
 ::selection{background:rgba(255,255,0,0.3);color:#000}
 
-a::-moz-selection{background:rgba(255,255,0,0.3);color:#0645ad}
+/*a::-moz-selection{background:rgba(255,255,0,0.3);color:#0645ad}
 a::selection{background:rgba(255,255,0,0.3);color:#0645ad}
 
 a{ color: #0645ad; text-decoration:none;}
 a:visited{ color: #0E60B3; }
 a:hover{ color:#333; border-bottom: 1px dotted #066;}
 a:active{ color:#faa700; }
+a:focus{ outline: thin dotted; }
+a:hover, a:active{ outline: 0; }*/
+
+/*0066948, 005E3F, 307860, 008026, 245E35 , 00992E, 008000. 008500*/
+a::-moz-selection{background:rgba(255,255,0,0.3);color:#008A00}
+a::selection{background:rgba(255,255,0,0.3);color:#008A00}
+
+a{ color: #008A00; text-decoration:none; font-size: 1em}
+a:visited{ color: #008A00; }
+a:hover{ color:#008A00; border-bottom: 1px dotted #066;}
+a:active{ color:#008A00; }
 a:focus{ outline: thin dotted; }
 a:hover, a:active{ outline: 0; }
 
@@ -68,6 +105,9 @@ h1,h2,h3,h4,h5,h6{
   color:#111;
   line-height:1em;
 }
+
+
+
 h4,h5,h6{ font-weight: bold; }
 h1{ font-size:2.5em; }
 h2{ font-size:2em; border-bottom:1px solid silver; padding-bottom: 5px; }
@@ -120,11 +160,17 @@ td { vertical-align: top; }
   h2, h3 { page-break-after: avoid; }
 }
 
-div.container { min-width:600px; max-width:1000px; margin:10px auto; }
+div.container { 
+  min-width:100px; 
+  max-width:1000px; 
+  margin:10px auto; 
+}
 
 div.left-container {
   float:left; 
-  width:250px; min-height:100%; 
+  min-width:100px; max-width:250px;
+  /*width:250px;*/
+  /*min-height:100%; */
   margin-left:5px; margin-right:5px;  
 }
 
@@ -132,35 +178,243 @@ div.left {
   background-color:#FFF; color:#111; 
   border:1px solid silver; 
   border-radius:10px; -moz-border-radius:10px;
-  border-left-color: silver; border-left-width: 2px;
-  border-right-color: silver; border-right-width: 2px;
+  border-left-color: silver; border-left-width: 10px;
+  /*border-right-color: silver; border-right-width: 2px;*/
   padding-left:10px; padding-right:10px; padding-bottom:10px; padding-top:10px;
   margin-bottom: 10px
 }
 
 div.left:hover {
-    border-left-color: skyblue; border-left-width: 2px;
-    border-right-color: skyblue; border-right-width: 2px;
-  }
+  border-left-color: #6AA67E; border-left-width: 12px;
+  border-right-color: #6AA67E; border-right-width: 2px; /*skyblue*/
+}
 
 div.center {
+  /*float:left;*/
   width:auto; 
-  margin-left:265px; margin-right:5px; margin-bottom:10px; 
+  margin-right:0px; margin-bottom:10px; 
   background-color:#FFF; color:#111; 
   border:1px solid silver;
   border-radius:10px; -moz-border-radius:10px; 
-  border-left-color: silver; border-left-width: 2px;
-  border-right-color: silver; border-right-width: 2px;
-  padding-left:12.5px; padding-right:12.5px; padding-bottom:1px; padding-top:1px;
+  border-left-color: lightseagreen ; border-left-width: 1px;
+  border-right-color: lightseagreen ; border-right-width: 1px;
+  padding-left:10px; padding-right:10px; padding-bottom:1px; padding-top:1px;
 }
 
 div.center:hover {
-  border-left-color: skyblue; border-left-width: 2px;
-  border-right-color: skyblue; border-right-width: 2px;
+  border-left-color: #6AA67E; border-left-width: 4px;
+  padding-left:7px;
+  border-right-color: #6AA67E; border-right-width: 1px;
 }
+
+/*0066948, 005E3F, 307860, 008026, 245E35 , 00992E, 008000. 008500*/
+div.stretch:hover strong.big, 
+div.center:hover strong.regular, 
+div.plain:hover strong.regular,
+li:hover strong {
+  /*color:rgba(4, 102, 30, 1);*/
+  color: rgba(0, 113, 25, 1);
+}
+
+div.plain {
+  width:auto; 
+  margin-right:0px; margin-bottom:10px; 
+  /*background-color:#FFF; */
+  background-color:rgba(255, 255, 255, 1);
+  color:#111; 
+  border:1px solid silver;
+  border-radius:10px; -moz-border-radius:10px; 
+  /*border-left-color: silver; border-left-width: 2px;*/
+  /*border-right-color: silver; border-right-width: 2px;*/
+  /*padding-left:12.5px; padding-right:12.5px; padding-bottom:1px; padding-top:1px;*/
+  padding-left:10px; padding-right:10px; padding-bottom:1px; padding-top:1px;
+  overflow:hidden
+  
+}
+
+div.stretch {
+  margin-left:0px;
+}
+
+
+img.icon {
+  width: 20px;
+  height: 20px;
+}
+
+.header {
+  width: auto;
+  height: auto;
+  /*background-position: -150px 900px;*/
+  /*background-image: url(http://www.ics.uci.edu/~vpalepu/images/tunnel.jpg);*/
+  /*background-image: url(http://www.ics.uci.edu/~vpalepu/images/brain.png);*/
+  /*background-image: url(http://www.ics.uci.edu/~vpalepu/images/1990.jpg);*/
+  /*background-image: url(http://www.ics.uci.edu/~vpalepu/images/wordle2.png);*/
+  border-radius:10px; -moz-border-radius:10px;
+  border:0px solid silver;
+  margin-top: 10px;
+  margin-bottom: 15px;
+  margin-right: 0px;
+  padding-left:10px; padding-right:10px; padding-bottom:1px; padding-top:1px;
+  /*color:#FFF;*/
+  /*background-color: #FFF;*/
+}
+
+.footer {
+  width: auto;
+  height: 150px;
+  background-position: -150px 900px;
+  /*background: #006666;*/
+  /*background-image: url(http://www.ics.uci.edu/~vpalepu/images/tunnel.jpg);*/
+  /*background-image: url(http://www.ics.uci.edu/~vpalepu/images/brain.png);*/
+  /*background-image: url(http://www.ics.uci.edu/~vpalepu/images/1990.jpg);*/
+  /*background-image: url(http://www.ics.uci.edu/~vpalepu/images/wordle2.png);*/
+  border-radius:10px; -moz-border-radius:10px;
+  border:0px solid silver;
+  margin-top: 10px;
+  margin-bottom: -26px;
+  margin-right: 0px;
+  padding-left:10px; padding-right:10px; padding-bottom:1px; padding-top:1px;
+}
+
+.tiny {
+  font-size: 0.75em;
+}
+
+.small {
+  font-size: 0.9em;
+}
+
+.regular {
+  font-size: 1em;
+}
+
+.big {
+  font-size: 1.2em;
+}
+
+.huge {
+  font-size: 1.5em;
+}
+
+.gynormous {
+  font-size: 2.5em;
+}
+
+hr {
+  border:1px thin sliver;
+}
+
+hr.thinblue { 
+ border: 0;
+ height: 1px;
+ background: #6AA67E;
+ /*color: sliver;*/
+ /*background-image: -webkit-linear-gradient(left, #ccc, #333, #ccc);
+ background-image: -moz-linear-gradient(left, #ccc, #333, #ccc);
+ background-image: -ms-linear-gradient(left, #ccc, #333, #ccc);
+ background-image: -o-linear-gradient(left, #ccc, #333, #ccc);*/
+ }
+
+
 
 #right {float:left; width:250px; margin-left:5px; margin-right:5px; margin-top:-22px; background-color:#111; color:#EEE}
 
 .twtr-hd, .twtr-ft {display: none;}
 
 .label {font-size: .9em}
+
+@font-face {
+  font-family: 'icomoon';
+  src:url('fonts/icomoon.eot?aj010b');
+  src:url('fonts/icomoon.eot?#iefixaj010b') format('embedded-opentype'),
+    url('fonts/icomoon.woff?aj010b') format('woff'),
+    url('fonts/icomoon.ttf?aj010b') format('truetype'),
+    url('fonts/icomoon.svg?aj010b#icomoon') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+[class^="icon-"], [class*=" icon-"] {
+  font-family: 'icomoon';
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  /*font-size: 0.5em;*/
+  text-transform: none;
+  line-height: 1;
+
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-home:before {
+  content: "\e600";
+}
+
+.icon-download:before {
+  content: "\e601";
+}
+
+.icon-file-pdf:before {
+  content: "\e603";
+}
+
+/*iframe.twitter-tweet {
+  margin: 10px auto !important;
+}*/
+
+/*blockquote.twitter-tweet {
+  display: inline-block;
+  padding: 16px;
+  margin: 10px auto;
+  max-width: 468px;
+  border: #ddd 1px solid;
+  border-top-color: #eee;
+  border-bottom-color: #bbb;
+  border-radius: 5px;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.15);
+  font: bold 14px/18px Helvetica, Arial, sans-serif;
+  color: #000;
+}
+ 
+blockquote.twitter-tweet p {
+  font: normal 18px/24px Georgia, "Times New Roman", Palatino, serif;
+  margin: 0 5px 10px 0;
+}
+ 
+blockquote.twitter-tweet a[href^="https://twitter.com"] {
+  font-weight: normal;
+  color: #666;
+  font-size: 12px;
+}
+
+a.center {
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    background-color: #b0e0e6;
+}*/
+
+/*.col {
+  float:left;
+}
+
+.span_1_of_2 {
+  width:47%; 
+}
+
+.lightRoundBorder {
+  border: 1px solid whitesmoke; 
+  border-radius:10px; -moz-border-radius:10px; 
+  margin: 1px; 
+  padding:5px;
+}*/
+
+/*@media only screen and (max-width: 700px) {
+  .span_1_of_2 {
+    width: 100%;
+  }
+}*/
