Permlink not working for pubs.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us">
 <head>
-  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+  <!-- <meta http-equiv="content-type" content="text/html; charset=utf-8" /> -->
   <meta name="author" content="Vijay Krishna Palepu" />
   <link rel="shortcut icon" href="{{ site.url }}/images/favicon.gif" />
   <title>{{ page.title }}</title>
