--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -61,12 +61,16 @@
     <div class="plain stretch" style="padding-bottom:5px">  
       {% if page.title == "Vijay Krishna Palepu" %}
         <span class="huge">Vijay Krishna <b>Palepu</b></span>
-        <span class="tiny">
-          &bull; vpalepu [at] uci [dot] edu &bull;
-          5243 Bren Hall,
-          <a href="http://www.spideruci.org" target="_blank">Spider Lab</a>,
-          <a href="http://www.uci.edu/" target="_blank">University of California, Irvine</a>, CA 92697-3440
-        </span>
+          <small>
+            <a href="https://bitbucket.com/vpalepu" target="_blank">@<b>bitbucket</b>.com</a> &bull;
+            <a href="http://www.linkedin.com/in/palepuvijaykrishna" target="_blank">@Linked<b>in</b></a> &bull;
+            <a href="http://instagram.com/vpalepu" target="_blank">@Instagram</a> &bull;
+            <a href="https://medium.com/@vkrishnapalepu" target="_blank">@medium</a> &bull;
+            <a href="http://stackoverflow.com/users/1481262/vijay">@stack<b>overflow</b></a> &bull;
+            <a href="https://github.com/VijayKrishna">@<b>github</b>.com</a>
+            <br>
+            <!-- Background Photo: <a href="{{ site.url }}/images/mt-rainier.JPG" target="_blank">Mt. Ranier</a>, © Vijay Krishna Palepu, 2015 -->
+          </small>
       {% elsif page.title contains " - Vijay Krishna Palepu" %}
         {% if page.title == "CV - Vijay Krishna Palepu" %}
           <span class="huge">
