--- a/_includes/header-content.html
+++ b/_includes/header-content.html
@@ -1,5 +1,5 @@
     {% if include.header == true %}
-      <div id="header" class="plain stretch fixed" style="display: none; padding-bottom:5px">
+      <div id="stickyheader" class="plain stretch fixed" style="display: none; padding-bottom:5px; background-color:rgba(255, 255, 255, 1)">
     {% else %}
       <div class="plain stretch" style="display: block; padding-bottom:5px">
     {% endif %}
